--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
 <div class="section-divider" role="separator" aria-hidden="true"></div>
 
 <section class="shipping-section" id="envios">
-  <h3 class="shipping-title">También hacemos envíos a todo el país por Andreani</h3>
+  <h3 class="shipping-title">Envíos a todo el país por Andreani (a cargo del comprador)</h3>
   <img class="shipping-img" src="img/andreani.png" alt="Andreani - Envíos a todo el país" loading="lazy" decoding="async" width="1500" height="292"/>
 </section>
 
