--- a/index.html
+++ b/index.html
@@ -105,6 +105,13 @@
 
 <div class="section-divider" role="separator" aria-hidden="true"></div>
 
+<section class="shipping-section" id="envios">
+  <h3 class="shipping-title">Envíos a todo el país por Andreani (a cargo del comprador)</h3>
+  <img class="shipping-img" src="img/andreani.png" alt="Andreani - Envíos a todo el país" loading="lazy" decoding="async" width="1500" height="292"/>
+</section>
+
+<div class="section-divider" role="separator" aria-hidden="true"></div>
+
 <section class="contact-section" id="contacto" aria-label="Contacto">
   <div class="contact-card" role="list">
     <a class="contact-row contact-row--phone" role="listitem" href="https://wa.me/5491158768929" target="_blank" rel="noopener" aria-label="WhatsApp 1158768929">
@@ -132,24 +139,28 @@
 
     <div class="contact-divider" role="separator" aria-hidden="true"></div>
 
-    <a class="contact-row" role="listitem" href="https://www.google.com/maps?q=Humahuaca%204642" target="_blank" rel="noopener" aria-label="Dirección Humahuaca 4642">
+    <a class="contact-row" role="listitem" href="https://www.google.com/maps?q=Humahuaca%204642" target="_blank" rel="noopener" aria-label="Dirección Humahuaca 4650">
       <span class="contact-icon" aria-hidden="true">
         <svg viewBox="0 0 24 24" width="26" height="26" fill="none" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
           <path d="M12 21s7-5.2 7-11a7 7 0 1 0-14 0c0 5.8 7 11 7 11Z" stroke="currentColor" stroke-width="2" stroke-linejoin="round"/>
           <circle cx="12" cy="10" r="2.5" stroke="currentColor" stroke-width="2"/>
         </svg>
       </span>
-      <span class="contact-text">Humahuaca 4642</span>
+      <span class="contact-text">Humahuaca 4650</span>
     </a>
   </div>
 </section>
 
 <div class="section-divider" role="separator" aria-hidden="true"></div>
 
-<section class="shipping-section" id="envios">
-  <h3 class="shipping-title">Envíos a todo el país por Andreani (a cargo del comprador)</h3>
-  <img class="shipping-img" src="img/andreani.png" alt="Andreani - Envíos a todo el país" loading="lazy" decoding="async" width="1500" height="292"/>
+<section class="app-install-section" aria-label="Instalar app">
+  <button class="app-toast app-install-btn" type="button" aria-label="Instalar NOVA Seeds">
+    <img id="appInstallImg" src="./img/app2.png" alt="Instalar NOVA Seeds" loading="eager" decoding="async" fetchpriority="low" onerror="this.onerror=null;this.src='img/app2.png';">
+  </button>
 </section>
+
+<footer class="site-footer" aria-label="Copyright">novaseeds-argentina 2026 todos los derechos reservados</footer>
+
 
 
 </main>
@@ -185,11 +196,7 @@
   <span class="wa-toast__text">Compra x1 ud.</span>
 </a>
 
-  <section class="app-install-section" aria-label="Instalar app">
-  <button class="app-toast app-install-btn" type="button" aria-label="Instalar NOVA Seeds">
-    <img id="appInstallImg" src="./img/app.png" alt="Instalar NOVA Seeds" loading="eager" decoding="async" fetchpriority="low" onerror="this.onerror=null;this.src='img/app.png';">
-  </button>
-</section>
+  
 
   <a aria-label="WhatsApp" class="wa-fab" href="https://wa.me/5491158768929?text=Hola%2C%20quisiera%20solicitar%20informaci%C3%B3n%20sobre%20sus%20productos%20y%20disponibilidad.%20%C2%A1Gracias%21" id="wa-fab" rel="noopener" target="_blank"></a>
 </div>
