--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta charset="utf-8"/>
 <meta content="width=device-width,initial-scale=1,viewport-fit=cover" name="viewport"/>
 <meta content="#000000" name="theme-color"/>
-<meta content="Semillas de colección en blister. Variedades autoflorecientes. Consultas y pedidos por WhatsApp. Envíos a todo el país." name="description"/>
+<meta content="MixPack BSF. Variedades auto. Consultas y pedidos por WhatsApp. Envíos a todo el país." name="description"/>
 <title>NOVA Seeds - Semillas De Colección</title>
 <link href="css/styles.css" rel="stylesheet"/>
 <link as="image" fetchpriority="high" href="img/logo.png" rel="preload"/>
