--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <meta content="width=device-width,initial-scale=1,viewport-fit=cover" name="viewport"/>
 <meta content="#000000" name="theme-color"/>
 <meta content="MixPack BSF. Variedades auto. Consultas y pedidos por WhatsApp. Envíos a todo el país." name="description"/>
-<title>NOVA Seeds - Semillas De Colección</title>
+<title>NOVA Seeds - MixPack BSF</title>
 <link href="css/styles.css" rel="stylesheet"/>
 <link as="image" fetchpriority="high" href="img/logo.png" rel="preload"/>
 <link href="manifest.json" rel="manifest"/>
